--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </video>
                 </div>
                 <div class="card-text">
-                    <p>Hec Paris IEC</p>
+                    <p>Beev</p>
                     <p>Branding, Digital, Strategy</p>
                 </div>
             </div>
@@ -128,13 +128,30 @@
                     <img src="assets/img-video/thumbnail-peugeot-ac01e927d1befc.jpg" alt="">
                 </div>
                 <div class="card-text">
-                    <p>White coffee</p>
+                    <p>Peugeot</p>
+                    <p>Branding</p>
+                </div>
+            </div>
+
+            <div class="card card5">
+                <div class="card-img">
+                    <img src="assets/img-video/thumbnail-kreme-47f2f7370631b92f.jpg" alt="">
+                </div>
+                <div class="card-text">
+                    <p>Kreme</p>
                     <p>Branding, Stratégie</p>
                 </div>
             </div>
 
         </div>
 
+
+
+
+
+        <div class="last-thr-sec-text">
+                <p>Discover all our projects</p>
+        </div>
 
 
 
