--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>Scroll Trigger</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#section1">Section 1</a></li>
+                <li><a href="#section1"></a></li>
                 <li><a href="#section2">Section 2</a></li>
                 <li><a href="#section3">Section 3</a></li>
                 <li><a href="#section4">Section 4</a></li>
