--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <h1>Scroll Trigger</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#section1"></a></li>
-                <li><a href="#section2">Section 2</a></li>
-                <li><a href="#section3">Section 3</a></li>
-                <li><a href="#section4">Section 4</a></li>
+                <li><a href="#link1">Home</a></li>
+                <li><a href="#link2">Projects</a></li>
+                <li><a href="#link3">The Team</a></li>
+                <li><a href="#link4">Contact</a></li>
             </ul>
 
         </nav>
