--- a/index.html
+++ b/index.html
@@ -154,12 +154,21 @@
         </div>
 
 
-
-
     </section>
 
 
 
+
+
+    <section class="fourth">
+
+        <div class="pg-heading">
+            <h1>EXPERTISES</h1>
+        </div>
+
+
+
+    </section>
 
 
 
