--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 
     <section class="fifth">
 
-        
+        <div class="boxi"></div>
+        <div class="boxi"></div>
+        <div class="boxi"></div>
 
     </section>
 
