--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
         <div class="content">
             <div class="heading">
-                <h1 id="heading">hello</h1>
+                <div class="big-heading">
+                    <h1 id="heading">hello</h1>
+                </div>
     
                 <h4>We are the team <br> we think elastic</h4>
             </div>
