--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
 
         <div class="pg-heading">
             <h1>EXPERTISES</h1>
+
+            <img src="assets/img-video/thumbnail-kreme-47f2f7370631b92f.jpg" alt="">
+            <img src="assets/img-video/thumbnail-peugeot-ac01e927d1befc.jpg" alt="">
+            <img src="assets/img-video/thumbnail-white-coffee-b1aada709.jpg" alt="">
         </div>
 
     </section>
