--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <section class="fourth">
 
-        <div class="pg-heading">
+        <!-- <div class="pg-heading">
             <h1>EXPERTISES</h1>
             
             
@@ -172,6 +172,16 @@
             <img class="two" src="assets/img-video/thumbnail-peugeot-ac01e927d1befc.jpg" alt="">
             <img class="thr" src="assets/img-video/thumbnail-white-coffee-b1aada709.jpg" alt="">
 
+        </div> -->
+
+
+        <div class="pg-heading">
+            <div class="scroll-content">
+                <h1>EXPERTISES</h1>
+                <img class="one" src="assets/img-video/thumbnail-kreme-47f2f7370631b92f.jpg" />
+                <img class="two" src="assets/img-video/thumbnail-peugeot-ac01e927d1befc.jpg" />
+                <img class="thr" src="assets/img-video/thumbnail-white-coffee-b1aada709.jpg" />
+            </div>
         </div>
 
     </section>
