--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         <div class="pg-heading">
             <div class="scroll-content">
                 <h1>EXPERTISES</h1>
-                <img class="one" src="assets/img-video/thumbnail-kreme-47f2f7370631b92f.jpg" />
-                <img class="two" src="assets/img-video/thumbnail-peugeot-ac01e927d1befc.jpg" />
-                <img class="thr" src="assets/img-video/thumbnail-white-coffee-b1aada709.jpg" />
+                <img class="one" src="assets/img-video/img1.png" />
+                <img class="two" src="assets/img-video/img2.png" />
+                <img class="thr" src="assets/img-video/img3.png" />
             </div>
         </div>
 
