--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
 
     <section class="fifth">
         
+        <div class="grid">
+            <div class="row">
+                <img src="assets/img-video/logos/logo1.png" alt="Logo 1">
+                <img src="assets/img-video/logos/logo2.png" alt="Logo 2">
+                <img src="assets/img-video/logos/logo3.png" alt="Logo 3">
+                <img src="assets/img-video/logos/logo4.png" alt="Logo 4">
+            </div>
+            <div class="row">
+                <img src="assets/img-video/logos/logo5.png" alt="Logo 5">
+                <img src="assets/img-video/logos/logo6.png" alt="Logo 6">
+                <img src="assets/img-video/logos/logo7.png" alt="Logo 7">
+                <img src="assets/img-video/logos/logo8.png" alt="Logo 8">
+            </div>
+            <div class="row">
+                <img src="assets/img-video/logos/logo9.png" alt="Logo 9">
+                <img src="assets/img-video/logos/logo10.png" alt="Logo 10">
+                <img src="assets/img-video/logos/logo11.png" alt="Logo 11">
+                <img src="assets/img-video/logos/logo12.png" alt="Logo 12">
+            </div>
+        </div>
         
     </section>
 
