--- a/index.html
+++ b/index.html
@@ -202,9 +202,41 @@
             </div>
         </div>
         
+
+
+
+
+
+        <div class="contact">
+
+            <div class="contact-text">
+                <p>You have a beautiful <br> project? let's talk <br> about it <br> around a <span>Good coffee</span></p>
+            </div>
+
+            <div class="gif">
+                <img src="assets/img-video/cafe.gif" alt="">
+            </div>
+
+        </div>
+
+
+
+        <div class="projects">
+                <p><span>FOLLOWING / </span>PROJECTS</p>
+        </div>
     </section>
 
 
+    <footer class="footer">
+        <ul>
+            <li>DESIGN BY <span>DANIYAL</span></li>
+            <li>OUR NEWS</li>
+            <li><a target="_blank" href="https://wethinkelastic.com/">uncafe@wethinkelastic.com</a></li>
+            <li>Cookies</li>
+            <li>Legal notices</li>
+        </ul>
+
+    </footer>
 
 
 
