--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+
+        <!-- LOADER OVERLAY HTML -->
+    <div class="loader-overlay">
+        <div class="logo-container">
+            <img src="assets/img-video/img1.png" alt="" class="loader-logo">
+            <img src="assets/img-video/img2.png" alt="" class="loader-logo">
+            <img src="assets/img-video/img3.png" alt="" class="loader-logo">
+            <img src="assets/img-video/img1.png" alt="" class="loader-logo">
+            <img src="assets/img-video/img2.png" alt="" class="loader-logo">
+            <img src="assets/img-video/img3.png" alt="" class="loader-logo">
+        </div>
+        <!-- <div class="logo-container">
+            <img class="loader-logo" src="https://placehold.co/100x100/41e0c2/0d1b2a?text=L1" alt="Logo 1">
+            <img class="loader-logo" src="https://placehold.co/100x100/8affd8/0d1b2a?text=L2" alt="Logo 2">
+            <img class="loader-logo" src="https://placehold.co/100x100/41e0c2/0d1b2a?text=L3" alt="Logo 3">
+            <img class="loader-logo" src="https://placehold.co/100x100/8affd8/0d1b2a?text=L4" alt="Logo 4">
+            <img class="loader-logo" src="https://placehold.co/100x100/41e0c2/0d1b2a?text=L5" alt="Logo 5">
+            <img class="loader-logo" src="https://placehold.co/100x100/8affd8/0d1b2a?text=L6" alt="Logo 6">
+            <img class="loader-logo" src="https://placehold.co/100x100/41e0c2/0d1b2a?text=L7" alt="Logo 7">
+        </div> -->
+        <div class="loader-bar"></div>
+        <div class="loader-bar"></div>
+        <div class="loader-bar"></div>
+        <div class="loader-bar"></div>
+        <div class="loader-bar"></div>
+    </div>
     <div class="cursor"></div>
 
 
@@ -82,7 +109,7 @@
 
         <div class="sec-text">
             <h1>
-                <span>We</span> let's help <br> THE brands <br> &nbsp&nbsp<span>has</span> to grow <br> more quickly 
+                <span>We</span> let's help <br> THE brands <br> &nbsp&nbsp <span>has</span> to grow <br> more quickly 
             </h1>
 
             <p>
