--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <div class="loader-bar"></div>
         <div class="loader-bar"></div>
         <div class="loader-bar"></div>
+        <div class="loader-bar"></div>
+        <dgit iv class="loader-bar"></dgit>
     </div>
 
 
